kong2kic/testdata/kicv3_gateway/output-expected.yaml
apiVersion: configuration.konghq.com/v1
config:
  hide_client_headers: false
  identifier: consumer
  limit:
  - 5
  namespace: example_namespace
  strategy: local
  sync_rate: -1
  window_size:
  - 30
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service-rate-limiting-advanced
plugin: rate-limiting-advanced
---
apiVersion: configuration.konghq.com/v1
config:
  aws_key: my_key
  aws_region: us-west-2
  aws_secret: my_secret
  function_name: my_function
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-long9344b5559f
plugin: aws-lambda
---
apiVersion: configuration.konghq.com/v1
config:
  credentials: true
  exposed_headers:
  - X-My-Header
  headers:
  - Authorization
  max_age: 3600
  methods:
  - GET
  - POST
  origins:
  - example.com
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-longfdeaa51f90
plugin: cors
---
apiVersion: configuration.konghq.com/v1
config:
  path: /var/log/kong/kong.log
  reopen: true
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-long3b4b1fae8e
plugin: file-log
---
apiVersion: configuration.konghq.com/v1
config:
  content_type: application/json
  http_endpoint: http://example.com/logs
  keepalive: 60000
  method: POST
  queue_size: 1000
  retry_count: 10
  timeout: 10000
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-long59030a424c
plugin: http-log
---
apiVersion: configuration.konghq.com/v1
config:
  allow:
  - 192.168.0.1/24
  deny:
  - 192.168.0.2/32
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-longb44edd01cf
plugin: ip-restriction
---
apiVersion: configuration.konghq.com/v1
config:
  hide_client_headers: false
  identifier: consumer
  limit:
  - 5
  namespace: example_namespace
  strategy: local
  sync_rate: -1
  window_size:
  - 30
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-longef35b834c6
plugin: rate-limiting-advanced
---
apiVersion: configuration.konghq.com/v1
config:
  message: Forbidden
  status_code: 403
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-longb2c08ebc54
plugin: request-termination
---
apiVersion: configuration.konghq.com/v1
config:
  limits:
    limit_name:
      minute: 10
  policy: local
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-longc400f1ab11
plugin: response-ratelimiting
---
apiVersion: configuration.konghq.com/v1
config:
  host: example.com
  port: 1234
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-long47f9f5054d
plugin: tcp-log
---
apiVersion: configuration.konghq.com/v1
config:
  hide_credentials: false
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-long26f9714514
plugin: basic-auth
---
apiVersion: configuration.konghq.com/v1
config:
  anonymous: null
  claims_to_verify:
  - exp
  - nbf
  header_names:
  - Authorization
  key_claim_name: kid
  maximum_expiration: 3600
  run_on_preflight: true
  secret_is_base64: false
  uri_param_names:
  - token
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-long0239c8f63e
plugin: jwt
---
apiVersion: configuration.konghq.com/v1
config:
  hide_credentials: false
  key_in_body: false
  key_names:
  - apikey
  run_on_preflight: true
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-long5494737f3e
plugin: key-auth
---
apiVersion: configuration.konghq.com/v1
config:
  ca_certificates:
  - cce8c384-721f-4f58-85dd-50834e3e733a
  revocation_check_mode: SKIP
  skip_consumer_lookup: false
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-long89ae2d2b5d
plugin: mtls-auth
---
apiVersion: configuration.konghq.com/v1
config:
  allow:
  - admin
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-service--route-thisisaveryvery-longb2440ac898
plugin: acl
---
apiVersion: configuration.konghq.com/v1
config:
  hide_client_headers: false
  identifier: consumer
  limit:
  - 5
  namespace: example_namespace
  strategy: local
  sync_rate: -1
  window_size:
  - 30
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-user-rate-limiting-advanced
plugin: rate-limiting-advanced
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    konghq.com/https-redirect-status-code: "302"
    konghq.com/preserve-host: "true"
    konghq.com/regex-priority: "1"
    konghq.com/snis: example.com
    konghq.com/strip-path: "false"
  name: example-service--route-thisisaveryvery-long2093a020ca
spec:
  hostnames:
  - example.com
  - another-example.com
  - yet-another-example.com
  parentRefs:
  - name: kong
  rules:
  - backendRefs:
    - name: example-service
      port: 80
    filters:
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long9344b5559f
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longfdeaa51f90
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long3b4b1fae8e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long59030a424c
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb44edd01cf
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longef35b834c6
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2c08ebc54
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longc400f1ab11
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long47f9f5054d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long26f9714514
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long0239c8f63e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long5494737f3e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long89ae2d2b5d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2440ac898
      type: ExtensionRef
    matches:
    - headers:
      - name: x-another-header
        type: Exact
        value: first-header-value,second-header-value
      - name: x-my-header
        type: RegularExpression
        value: foos?bar$
      method: GET
      path:
        type: RegularExpression
        value: /v1/example/?$
  - backendRefs:
    - name: example-service
      port: 80
    filters:
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long9344b5559f
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longfdeaa51f90
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long3b4b1fae8e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long59030a424c
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb44edd01cf
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longef35b834c6
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2c08ebc54
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longc400f1ab11
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long47f9f5054d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long26f9714514
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long0239c8f63e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long5494737f3e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long89ae2d2b5d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2440ac898
      type: ExtensionRef
    matches:
    - headers:
      - name: x-another-header
        type: Exact
        value: first-header-value,second-header-value
      - name: x-my-header
        type: RegularExpression
        value: foos?bar$
      method: POST
      path:
        type: RegularExpression
        value: /v1/example/?$
  - backendRefs:
    - name: example-service
      port: 80
    filters:
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long9344b5559f
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longfdeaa51f90
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long3b4b1fae8e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long59030a424c
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb44edd01cf
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longef35b834c6
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2c08ebc54
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longc400f1ab11
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long47f9f5054d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long26f9714514
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long0239c8f63e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long5494737f3e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long89ae2d2b5d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2440ac898
      type: ExtensionRef
    matches:
    - headers:
      - name: x-another-header
        type: Exact
        value: first-header-value,second-header-value
      - name: x-my-header
        type: RegularExpression
        value: foos?bar$
      method: GET
      path:
        type: PathPrefix
        value: /v1/another-example
  - backendRefs:
    - name: example-service
      port: 80
    filters:
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long9344b5559f
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longfdeaa51f90
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long3b4b1fae8e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long59030a424c
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb44edd01cf
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longef35b834c6
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2c08ebc54
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longc400f1ab11
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long47f9f5054d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long26f9714514
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long0239c8f63e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long5494737f3e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long89ae2d2b5d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2440ac898
      type: ExtensionRef
    matches:
    - headers:
      - name: x-another-header
        type: Exact
        value: first-header-value,second-header-value
      - name: x-my-header
        type: RegularExpression
        value: foos?bar$
      method: POST
      path:
        type: PathPrefix
        value: /v1/another-example
  - backendRefs:
    - name: example-service
      port: 80
    filters:
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long9344b5559f
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longfdeaa51f90
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long3b4b1fae8e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long59030a424c
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb44edd01cf
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longef35b834c6
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2c08ebc54
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longc400f1ab11
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long47f9f5054d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long26f9714514
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long0239c8f63e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long5494737f3e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long89ae2d2b5d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2440ac898
      type: ExtensionRef
    matches:
    - headers:
      - name: x-another-header
        type: Exact
        value: first-header-value,second-header-value
      - name: x-my-header
        type: RegularExpression
        value: foos?bar$
      method: GET
      path:
        type: PathPrefix
        value: /v1/yet-another-example
  - backendRefs:
    - name: example-service
      port: 80
    filters:
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long9344b5559f
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longfdeaa51f90
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long3b4b1fae8e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long59030a424c
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb44edd01cf
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longef35b834c6
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2c08ebc54
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longc400f1ab11
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long47f9f5054d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long26f9714514
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long0239c8f63e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long5494737f3e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long89ae2d2b5d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2440ac898
      type: ExtensionRef
    matches:
    - headers:
      - name: x-another-header
        type: Exact
        value: first-header-value,second-header-value
      - name: x-my-header
        type: RegularExpression
        value: foos?bar$
      method: POST
      path:
        type: PathPrefix
        value: /v1/yet-another-example
---
apiVersion: configuration.konghq.com/v1beta1
kind: KongUpstreamPolicy
metadata:
  name: example-service-upstream
spec:
  algorithm: round-robin
  healthchecks:
    active:
      concurrency: 10
      headers:
        x-another-header:
        - bla
        x-my-header:
        - foo
        - bar
      healthy:
        httpStatuses:
        - 200
        - 302
        interval: 0
        successes: 0
      httpPath: /
      httpsSni: example.com
      httpsVerifyCertificate: true
      timeout: 1
      type: http
      unhealthy:
        httpFailures: 0
        httpStatuses:
        - 429
        - 404
        - 500
        - 501
        - 502
        - 503
        - 504
        - 505
        interval: 0
        tcpFailures: 0
        timeouts: 0
    passive:
      healthy:
        httpStatuses:
        - 200
        - 201
        - 202
        - 203
        - 204
        - 205
        - 206
        - 207
        - 208
        - 226
        - 300
        - 301
        - 302
        - 303
        - 304
        - 305
        - 306
        - 307
        - 308
        successes: 0
      type: http
      unhealthy:
        httpFailures: 0
        httpStatuses:
        - 429
        - 500
        - 503
        tcpFailures: 0
        timeouts: 0
    threshold: 0
  slots: 10000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    konghq.com/connect-timeout: "5000"
    konghq.com/path: /v1
    konghq.com/plugins: example-service-rate-limiting-advanced
    konghq.com/protocol: http
    konghq.com/read-timeout: "60000"
    konghq.com/retries: "5"
    konghq.com/upstream-policy: example-service-upstream
    konghq.com/write-timeout: "60000"
  name: example-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: example-service
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  labels:
    konghq.com/credential: key-auth
  name: key-auth-example-user
stringData:
  key: my_api_key
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  labels:
    konghq.com/credential: jwt
  name: jwt-auth-example-user
stringData:
  algorithm: HS256
  key: my_jwt_secret
  rsa_public_key: |-
    -----BEGIN PUBLIC KEY-----
    MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAxXzYS5yESbekTF3xLiQX
[...]
    ewIDAQAB
    -----END PUBLIC KEY-----
  secret: my_secret_key
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  labels:
    konghq.com/credential: basic-auth
  name: basic-auth-example-user
stringData:
  password: my_basic_password
  username: my_basic_user
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  labels:
    konghq.com/credential: acl
  name: acl-group-example-user
stringData:
  group: acl_group
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  labels:
    konghq.com/credential: mtls-auth
  name: mtls-auth-example-user
stringData:
  id: cce8c384-721f-4f58-85dd-50834e3e733a
  subject_name: example-user@example.com
type: Opaque
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: ca-cert-a672ab52d2341203bd70116b456413d7ac3ffc162abbf
stringData:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIBfDCCASKgAwIBAgIRAJqcZC1VSvSQLMN1+7yAeswwCgYIKoZIzj0EAwIwHDEa
[...]
    -----END CERTIFICATE-----
  ca.digest: f1baffe9fe9cf8497e38a4271d67fab44423678b7e7c0f677a50f37c113d81b5
type: Opaque
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: ca-cert-a4f087c2ee00e6d43cfb4f6884fc1e79f7e6e08e84471
stringData:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIBqTCCAVCgAwIBAgIQb5LqGa9gS3+Mc2ntWfSoJjAKBggqhkjOPQQDAjAcMRow
[...]
    -----END CERTIFICATE-----
  ca.digest: dbef7ed285fb292e24f84ffba93c48d92fa322387d85469c460c655abedd5308
type: Opaque
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: ca-cert-6b095c7ff377b01252a4dfec59c582fe32934fa7ed0cf
stringData:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIBujCCAV+gAwIBAgIRAMkGpj7WZf+2RFE/q7ZhejEwCgYIKoZIzj0EAwIwKjEo
[...]
    gxUhveuHBXMWnzUbn6U=
    -----END CERTIFICATE-----
  ca.digest: 45b2b6dd9d4102955b1b1e4b540e677f140521462ed4f22fa5a713863ca84600
type: Opaque
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: cert-0ee0e1584c8637facac95bd5fce315367dee124c0086d41e
stringData:
  tls.crt: |-
    -----BEGIN CERTIFICATE-----
    MIIECTCCAvGgAwIBAgIUAusYGP9BwoLFFAJdB/jY6eUzUyAwDQYJKoZIhvcNAQEL
[...]
    Ewxs5FbrMmgCOgwk1PtgRmdP3RME0HwK/B03saQ=
    -----END CERTIFICATE-----
  tls.key: |-
    -----BEGIN PRIVATE KEY-----
    MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQCVGyoqqAitQUzZ
[...]
    NNSvLxPAempmiFPSk9AtobYV
    -----END PRIVATE KEY-----
type: kubernetes.io/tls
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: cert-b12464ec431576239dd9cc2545d528f6cbdbd988cf076323
stringData:
  tls.crt: |-
    -----BEGIN CERTIFICATE-----
    MIIFeDCCBGCgAwIBAgIUAusYGP9BwoLFFAJdB/jY6eUzUyQwDQYJKoZIhvcNAQEL
[...]
    T8tqV6i5miKWwvfZ
    -----END CERTIFICATE-----
  tls.key: |-
    -----BEGIN RSA PRIVATE KEY-----
    MIIJKQIBAAKCAgEA1/+83/YNiEVKYvcuVwYGve6afsg1BYCn1+E9Uwgh0uwAenT/
[...]
    -----END RSA PRIVATE KEY-----
type: kubernetes.io/tls
---
apiVersion: configuration.konghq.com/v1
consumerGroups:
- example-consumer-group
credentials:
- key-auth-example-user
- jwt-auth-example-user
- basic-auth-example-user
- acl-group-example-user
- mtls-auth-example-user
custom_id: "1234567890"
kind: KongConsumer
metadata:
  annotations:
    konghq.com/plugins: example-user-rate-limiting-advanced
    kubernetes.io/ingress.class: kong
  name: example-user
username: example-user
---
apiVersion: configuration.konghq.com/v1beta1
kind: KongConsumerGroup
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: example-consumer-group
---
